Update game controller with more methods
